overflow issues addressed, all projects requirements met

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ html {
   flex-direction: column;
   align-items: center;
   width: 300px;
-  height: 400px;
+  min-height: 400px;
   background-color: white;
   border-radius: 2%;
   border-color: black;
@@ -41,6 +41,7 @@ html {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
 }
